@@ -2,6 +2,8 @@ Pwauth Change Log
 =================
 
 VERSION 2.3.9 - 
+  - Renamed PAM_OS_X configuration setting to PAM_OLD_OS_X since it only
+    is needed for OS X 10.5 and older.
   - Rearranged ifdef's so that undefining SLEEP_LOCK actually completely
     disables the sleep-on-failure behavior.
   - Minor documentation fixes
